
- Intl:
  . Removed deprecated aliases datefmt_set_timezone_id() and
    IntlDateFormatter::setTimeZoneID(). (Nikita)

- JSON
  . Replace non-free JSON parser with a parser from Jsond extension, fixes #63520
    (JSON extension includes a problematic license statement). (Jakub Zelenka)
  . Fixed bug #68938 (json_decode() decodes empty string without error).
    (jeremy at bat-country dot us)

- LDAP
  . Fixed bug #47222 (Implement LDAP_OPT_DIAGNOSTIC_MESSAGE). (Andreas Heigl)

- LiteSpeed:
  . Updated LiteSpeed SAPI code from V5.5 to V6.6. (George Wang)

- libxml:
  . Fixed handling of big lines in error messages with libxml >= 2.9.0.
    (Christoph M. Becker)

- Mcrypt:
  . Fixed possible read after end of buffer and use after free. (Dmitry)
  . Removed mcrypt_generic_end() alias. (Nikita)
  . Removed mcrypt_ecb(), mcrypt_cbc(), mcrypt_cfb(), mcrypt_ofb(). (Nikita)

- Opcache:
  . Fixed bug #69688 (segfault with eval and opcache fast shutdown).
    (Laruence)
  . Added experimental (disabled by default) file based opcode cache.
    (Dmitry, Laruence, Anatol)
  . Fixed bug with try blocks being removed when extended_info opcode
    generation is turned on. (Laruence)
  . Fixed bug #68644 (strlen incorrect : mbstring + func_overload=2 +UTF-8
    + Opcache). (Laruence)

- OpenSSL:
  . Added "alpn_protocols" SSL context option allowing encrypted client/server
    streams to negotiate alternative protocols using the ALPN TLS extension when
    built against OpenSSL 1.0.2 or newer. Negotiated protocol information is
    accessible through stream_get_meta_data() output.
  . Removed "CN_match" and "SNI_server_name" SSL context options. Use automatic
    detection or the "peer_name" option instead. (Nikita)

- pcntl:
  . Fixed bug #60509 (pcntl_signal doesn't decrease ref-count of old handler
    when setting SIG_DFL). (Julien)
  . Added wifcontinued and wcontinued. (xilon-jul)
  . Added rusage support to pcntl_wait() and pcntl_waitpid(). (Anton Stepanenko,
    Tony)
