@@ -51,6 +51,7 @@ typedef enum {
 	PHP_JSON_ERROR_RECURSION,
 	PHP_JSON_ERROR_INF_OR_NAN,
 	PHP_JSON_ERROR_UNSUPPORTED_TYPE,
+	PHP_JSON_ERROR_INVALID_PROPERTY_NAME,
 	PHP_JSON_ERROR_UTF16
 } php_json_error_code;
 
